--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,21 @@
   right: 0;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
+  background: #4795ff;
+  z-index: 2;
+}
+
+.main {
+  display: flex;
+  flex: 1;
 }
 
 .flex {
@@ -25,33 +40,32 @@
   display: flex;
   flex-direction: column;
   background: #444;
+  color: white;
 }
 
 .files {
   flex: 1;
   overflow-y: auto;
-  color: white;
-  padding: 8px 0;
   overflow-x: hidden;
-  max-width: 25vw;
 }
 
 .file {
   cursor: pointer;
-  padding: 8px 16px;
+  padding: 12px 16px;
   transition: background-color 0.25s;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   flex-shrink: 0;
+  max-width: 25vw;
 }
 
 .file:hover {
-  background-color: #888;
+  background-color: #999;
 }
 
-.selected {
-  background-color: #929292;
+.file.selected {
+  background-color: #777;
 }
 
 .dropzone {
@@ -64,21 +78,18 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  line-height: 1;
-}
-
-.dropzone:hover {
-  background: #3f7fdc;
+  font-size: 400%;
+  text-shadow: 0 1px 1px black;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .dropzone:focus {
   outline: none;
-}
-
-.fullscreen .dropzone {
-  height: 100vh;
-  width: 100vw;
-  font-size: 400%;
 }
 
 .download {
@@ -119,12 +130,15 @@
 }
 
 .filename {
+  background-color: #3775ca;
+  color: white;
   padding: 16px;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-shrink: 0;
+  line-height: 1;
 }
 
 .reset {
@@ -133,6 +147,38 @@
   cursor: pointer;
 }
 
-.select-message {
-  padding: 32px;
+.zipfile {
+  background-color: #3168b3;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  line-height: 1;
+}
+
+.reset {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reset:focus {
+  outline: none;
+}
+
+.logo {
+  width: 32px;
+  height: 32px;
+  transition: width 0.25s, height 0.25s;
+}
+
+.fullscreen .logo {
+  width: 64px;
+  height: 64px;
+  padding: 8px 0;
 }
