--- a/public/index.ejs
+++ b/public/index.ejs
@@ -12,6 +12,7 @@
       gtag('config', '<%= htmlWebpackPlugin.options.ga %>');
     </script>
 
+    <link rel="manifest" href="/manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet">
 </head>
 <body>
