--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="View or edit the contents of a ZIP file">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=<%= htmlWebpackPlugin.options.ga %>"></script>
