--- a/src/App.css
+++ b/src/App.css
@@ -128,13 +128,6 @@
   cursor: pointer;
 }
 
-.zipfile {
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  text-shadow: 0 1px 1px #444;
-}
-
 .reset {
   border: none;
   background: none;
@@ -262,4 +255,24 @@
 .preview-image {
   max-width: 100%;
   margin: auto;
+}
+
+.filename-form {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  text-shadow: 0 1px 1px #444;
+}
+
+.filename-input {
+  background: none;
+  color: inherit;
+  font-size: inherit;
+  border: 2px solid transparent;
+  transition: border-color 0.25s;
+}
+
+.filename-input:focus {
+  outline: none;
+  border-bottom-color: white;
 }
