--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,8 +1,10 @@
 <!doctype html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View or edit the contents of a ZIP file">
+    <meta name="theme-color" content="#ffffff">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=<%= htmlWebpackPlugin.options.ga %>"></script>
@@ -14,8 +16,10 @@
     </script>
 
     <link rel="manifest" href="/manifest.json">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
+<noscript>Please enable JavaScript to use this application.</noscript>
 </body>
+</html>
