--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,9 @@
 }
 
 .error {
-  background: red;
   color: white;
+  background-color: red;
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
 }
 
 .message {
