--- a/src/App.css
+++ b/src/App.css
@@ -174,14 +174,16 @@ a {
   justify-content: center;
   align-items: center;
   text-align: center;
-  border: 4px solid #ffffff77;
+  border: 2px solid #000;
   cursor: pointer;
   transition: border-color 0.25s;
   font-size: 200%;
+  box-shadow: 5px 5px 0 rgba(0,0,0,0.5);
+  min-height: 300px;
 }
 
 .dropzone:hover {
-  border-color: #ffffff;
+  box-shadow: 5px 5px 0 rgba(0,0,0,1.0);
 }
 
 .dropzone:focus {
